[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptoctree"
version = "1.3.0"
description = "A description of your project"
authors = [
    { name = "Srinath Kailasa", email = "srinathkailasa@gmail.com" }
]
keywords = ["AdaptOctree"]
classifiers = [
    "Programming Language :: Python :: 3.8"
]

dependencies = [
    "numba",
    "pytest"
]

readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
urls = { "Homepage"="https://github.com/excalibur-sle/AdaptOctree"}


[tool.setuptools.packages.find]
exclude = ["*.test"]